# algortihms

./: CMakeLists.txt  README.md
include/: hash.h  list.h
src/: hash.cpp  list.cpp
test/: test_hash.cpp  test_list.cpp
